--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="container">
             <div class="subtitle promo__subtitle">Меня зовут <span>Алексей Мельников</span></div>
-            <h1 class="promo__title">Я начинающий <br> frontend-разработчик <br> из города Санкт-Петербург</h1>
+            <h1 class="promo__title">Я начинающий <br> <span>frontend-разработчик</span> <br> из города Санкт-Петербург</h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link button" id="technology">Технологии</a>
                 <a href="#" class="promo__link" id="about">Про меня</a>
@@ -111,7 +111,7 @@
                 <div class="promo__technology-title subtitle">Используемый стек технологий в портфолио:</div>
                 <div class="line line_intro"></div>
                 <div class="promo__technology-descr">
-                    Проект создан на базе нативного Javascript<br>Для расположение элементов использовал display: flex и display: grid<br>Препроцессор SCSS<br>Сборщик модулей Webpack<br>Использован планировщик задач gulp 
+                    Проект создан на базе нативного <span>Javascript</span><br>Для расположение элементов использовал <span>display: flex</span> и <span>display: grid</span><br>Препроцессор SCSS<br>Сборщик модулей <span>Webpack</span><br>Использован планировщик задач <span>gulp</span> 
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                     <h2 class="subtitle introduce__subtitle">Про меня</h2>
                     <div class="title introduce__title">Меня зовут Алексей</div>
                     <div class="line line_intro"></div>
-                    <div class="introduce__text"><p>Активно практикуюсь каждый день. Как основной источник информации использовал курсы Ивана Петриченко на Udemy - основной язык разработки Javascript, на данный момент разбираю документацию Vue 3 и MongoDB. Работал в Figma, для сборки проектов использую Gulp и Webpack, препроцессор SCSS, немного затрагивал библиотеку React, планирую в скором времени изучение Typescript. Очень заинтересован в работе на позицию Junior/Trainee разработчика. </p></div>
+                    <div class="introduce__text"><p>Активно практикуюсь каждый день. Как основной источник информации использовал курсы Ивана Петриченко на <span>Udemy</span> - основной язык разработки <span>Javascript</span>, на данный момент разбираю документацию <span>Vue 3</span> и <span>MongoDB</span>. Работал в <span>Figma</span>, для сборки проектов использую <span>Gulp</span> и <span>Webpack</span>, препроцессор <span>SCSS</span>, немного затрагивал библиотеку <span>React</span>, планирую в скором времени изучение <span>Typescript</span>. Очень заинтересован в работе на позицию <span>Junior/Trainee</span> разработчика. </p></div>
                 </div>
                     <div class="introduce__items">
                         <div class="introduce-item">
@@ -138,12 +138,12 @@
                         <div class="introduce-item">
                             <img src="icons/about_me/mobile_dev.svg" alt="2" class="introduce-item__icon">
                             <div class="subtitle subtitle_fs14">Разработка приложений</div>
-                            <div class="introduce-item__descr">Имею 3-х месячный опыт стажировки в IT-компании, работа с фреймворком Flutter языка Dart</div>
+                            <div class="introduce-item__descr">Имею 3-х месячный опыт стажировки в IT-компании, работа с фреймворком <span>Flutter</span> языка <span>Dart</span></div>
                         </div>
                         <div class="introduce-item">
                             <img src="icons/about_me/design.svg" alt="3" class="introduce-item__icon">
                             <div class="subtitle subtitle_fs14">Coding</div>
-                            <div class="introduce-item__descr">Основным вектором изучения сейчас является Javascript. Разбираю тестовые задания, изучаю Vue 3</div>
+                            <div class="introduce-item__descr">Основным вектором изучения сейчас является <span>Javascript</span>. Разбираю тестовые задания, изучаю <span>Vue 3</span></div>
                         </div>
                     </div>
             </div>
@@ -170,7 +170,7 @@
                                     <div class="resume__item-info">4 курс | Спб (2019-2023)</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Обучался на направлении "Инфокоммуникационные технологии и системы связи". По программе вуза имел небольшой опыт работы с языком программирования PHP , а также с отдельным курсом по алгоритмам
+                                    Обучался на направлении "Инфокоммуникационные технологии и системы связи". По программе вуза имел небольшой опыт работы с языком программирования <span>PHP</span> , а также с отдельным курсом по алгоритмам
                                 </div>
                             </div>
                         </li>
@@ -184,7 +184,7 @@
                                     <div class="resume__item-info">Прикладная информатика</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Было большое желание поступить на профильную специальность, здесь подробнее изучаю JS, базы данных и Node.js. В планах получить здесь дополнительную практику, чтобы улучшить свои навыки и знания
+                                    Было большое желание поступить на профильную специальность, здесь подробнее изучаю <span>JS</span>, базы данных и <span>Node.js</span>. В планах получить здесь дополнительную практику, чтобы улучшить свои навыки и знания
                                 </div>
                             </div>
                         </li>
@@ -204,7 +204,7 @@
                                     <div class="resume__item-info">АСБ | Спб (2021)</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Имею 3-х месячный опыт коммерческой разработки в It. Под руководством ментора создавал мобильное приложение на языке Dart, фреймворке Flutter. Изучал там базовые концепции ООП и Github
+                                    Имею 3-х месячный опыт коммерческой разработки в <span>IT</span>. Под руководством ментора создавал мобильное приложение на языке <span>Dart</span>, фреймворке <span>Flutter</span>. Изучал там базовые концепции ООП и <span>Github</span>
                                 </div>
                             </div>
                         </li>
@@ -218,7 +218,7 @@
                                     <div class="resume__item-info">A1exxxM | Спб (2022)</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Публикую свои наработки и веб-сайты на Github, имею в портфолио на данный момент 4 web сайта и два web приложения на базе React, а также 1 коммерческий проект - сайт бренда одежды 
+                                    Публикую свои наработки и веб-сайты на <span>Github</span>, имею в портфолио на данный момент 3 сайта, 2  приложения на базе <span>React</span>, 1 <span>Vue</span> приложение и многостраничный ресурс на <span>Vue</span> 
                                 </div>
                             </div>
                         </li>
@@ -366,7 +366,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/webstudio" class="works__item-link">webstudio.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/website.webp" alt="webstudio"></div>
-                    <div class="works__item-descr">Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Использовал нативный Javascript. Сделаны такие элементы , как : слайдер сотрудников, модальное окно при отправке формы, навигационное меню, сформированы карточки товаров и скрипт при наведении на них. Полностью оптмизирован и адаптивен. 
+                    <div class="works__item-descr">Использованы <span>gulp</span> и <span>webpack</span> для оптимизации проекта и его кроссбраузерности. Использовал нативный <span>Javascript</span>. Сделаны такие элементы , как : слайдер сотрудников, модальное окно при отправке формы, навигационное меню, сформированы карточки товаров и скрипт при наведении на них. Полностью оптимизирован и адаптивен. 
                     </div>
                 </div>
                 <div class="works__item">
@@ -376,7 +376,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/react-build" class="works__item-link">react.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/React-js.jpg" alt="React"></div>
-                    <div class="works__item-descr">Первый проект в стиле ToDo с использованием библиотеки React. Для стилей использован bootstrap. Работа компонентов построена на классах. Не адаптивен. 
+                    <div class="works__item-descr">Первый проект в стиле ToDo с использованием библиотеки <span>React</span>. Для стилей использован <span>bootstrap</span>. Работа компонентов построена на классах. Не адаптивен. 
                     </div>
                 </div>
                 <div class="works__item">
@@ -386,7 +386,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/invi" class="works__item-link">invi.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/invi.png" alt="invi"></div>
-                    <div class="works__item-descr">Первый коммерческий проект, опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Адаптивен. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта data. Препроцессор scss, БЭМ.
+                    <div class="works__item-descr">Первый коммерческий проект, опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом <span>js</span> для небольшого бренда одежды. Использованы <span>gulp</span> и <span>webpack</span> для оптимизации проекта и его кроссбраузерности. Адаптивен. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта <span>data</span>. Препроцессор <span>SCSS</span>, БЭМ.
 
                     </div>
                 </div>
@@ -397,7 +397,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/Marvel-Api-React/" class="works__item-link">marvel.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/marvel.jpeg" alt="marvel"></div>
-                    <div class="works__item-descr">Второе React приложение, учился здесь работать с информацией , полученной с API . Запросы сделаны с помощью fetch . При загрузке страницы запрашивается персонаж с случайным id , а также 9 персонажей с фиксированным отступом по числу персонажей в запросе.  При нажатии на карточку персонажа открывается информация о нём, о комиксах с его участием. 
+                    <div class="works__item-descr">Второе <span>React приложение</span>, учился здесь работать с информацией , полученной с <span>API</span> . Запросы сделаны с помощью <span>fetch</span> . При загрузке страницы запрашивается персонаж с случайным <span>id</span> , а также 9 персонажей с фиксированным отступом по числу персонажей в запросе. При нажатии на карточку персонажа открывается информация о нём, о комиксах с его участием. 
                     </div>
                 </div>
                 <div class="works__item">
@@ -407,7 +407,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/test_23.08/" class="works__item-link">test.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/university.jpg" alt="university"></div>
-                    <div class="works__item-descr">Тестовое задание на позицию "Верстальщик". Знакомился здесь в процессе работы с библиотекой chart.js для графиков. Не адаптивен
+                    <div class="works__item-descr">Тестовое задание на позицию "Верстальщик". Знакомился здесь в процессе работы с библиотекой <span>chart.js</span> для графиков. Не адаптивен
                     </div>
                 </div>
                 <div class="works__item">
@@ -417,7 +417,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/PostsVue" class="works__item-link">vue.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/Vue-Js.jpg" alt="vue"></div>
-                    <div class="works__item-descr">Первое приложение с использованием Vue. Поработал с менеджером состояний Vuex, технологией vue-router. Реализована возможность запроса постов с JSON-Placeholder, добавление, изменение и удаление постов в списке. Не адаптивен.
+                    <div class="works__item-descr">Первое приложение с использованием <span>Vue</span>. Поработал с менеджером состояний <span>Vuex</span>, технологией <span>vue-router</span>. Реализована возможность запроса постов с <span>JSON-Placeholder</span>, добавление, изменение и удаление постов в списке. Не адаптивен.
                     </div>
                 </div>
                 <div class="works__item">
@@ -427,7 +427,7 @@
                         <a target="_blank" href="https://a1exxxm.github.io/Fury-of-Elements" class="works__item-link">foe.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/world.webp" alt="vue"></div>
-                    <div class="works__item-descr">Настольная-ролевая игра, похожая на Dungeons&Dragons. Многостраничный ресурс, активно применял vue-router и Vuex, познакомился с npm пакетом html2pdf. Сейчас находится в активной разработке, в планах интеграция с MongoDB, адаптивность, возможность авторизации.
+                    <div class="works__item-descr">Настольная-ролевая игра, похожая на <span>Dungeons&Dragons</span>. Многостраничный ресурс, активно применял <span>vue-router</span> и <span>Vuex</span>, познакомился с npm пакетом <span>html2pdf</span>. Сейчас находится в активной разработке, в планах интеграция с <span>MongoDB</span>, адаптивность, возможность авторизации.
                     </div>
                 </div>
             </div>
